# page-turner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
page-turner/: Cargo.toml  README.md
page-turner-macros/: Cargo.toml  README.md
page-turner-macros/src/: lib.rs
page-turner/src/: lib.rs
page-turner/tests/: compilation_errors.rs  compilation_errors.stderr  main.rs  struct_support.rs
src/: lib.rs  pages.rs  prelude.rs  test_utils.rs
src/doc/: Main.md  PageError  PageItems  PageTurner  PageTurnerFuture  PageTurner__into_pages  PageTurner__into_pages_ahead  PageTurner__into_pages_ahead_unordered  PageTurner__pages  PageTurner__pages_ahead  PageTurner__pages_ahead_unordered  PageTurner__turn_page  PagesStream  PagesStream__items  TurnedPageResult  prelude
src/internal/: itertools.rs  mod.rs  pages.rs  pages_ahead.rs  pages_ahead_unordered.rs
src/local/: mod.rs  tests.rs
src/mt/: mod.rs  tests.rs
src/pages_ahead/: mod.rs  ordered.rs  unordered.rs
