[package]
name = "page-turner"
version = "0.8.2"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A generic abstraction of APIs with pagination"
readme = "README.md"
repository = "https://github.com/a1akris/page-turner"
documentation = "https://docs.rs/page-turner"
keywords = ["pagination", "paginated", "api", "pages", "page"]
categories = ["rust-patterns", "asynchronous", "web-programming", "network-programming", "concurrency"]

exclude = [
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = { version = "0.3.24", default_features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
