[package]
name = "page-turner-macros"
version = "0.5.2-dev"
authors = ["Oleksandr Kryvytskyi <alkrivitskiy@pm.me>"]
edition = "2021"
description = """
Macro for deriving a PageQuery trait.
"""
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
darling = "0.13"
