[package]
name = "page-turner"
version = "0.6.0"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "0.3.15"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
